# wallabag_stats

./: .gitignore  README.md  default_config.toml  pyproject.toml  uv.lock.license
src/wallabag_stats/: __init__.py
