[project]
name = "wallabag-stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "McDougall", email = "Duncan.McDougall@rfi.ac.uk" }
]
requires-python = ">=3.13"
dependencies = [
    "icecream>=2.2.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.34.2",
]

[project.scripts]
main = "wallabag_stats:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
